@@ -4,7 +4,11 @@ import com.carcenter.car_center_api.client.entities.Client;
 import com.carcenter.car_center_api.client.repositories.ClientRepository;
 import com.carcenter.car_center_api.maintenance.dtos.*;
 import com.carcenter.car_center_api.maintenance.entities.*;
-import com.carcenter.car_center_api.maintenance.repositories.*;
+import com.carcenter.car_center_api.maintenance.exceptions.InvalidMaintenanceStatusException;
+import com.carcenter.car_center_api.maintenance.exceptions.MaintenanceNotFoundException;
+import com.carcenter.car_center_api.maintenance.exceptions.MechanicNotFoundException;
+import com.carcenter.car_center_api.maintenance.mappers.MaintenanceMapper;
+import com.carcenter.car_center_api.maintenance.repositories.MaintenanceRepository;
 import com.carcenter.car_center_api.maintenance.services.MaintenanceServiceInterface;
 import com.carcenter.car_center_api.maintenanceserviceitem.repositories.MaintenanceServiceItemRepository;
 import com.carcenter.car_center_api.maintenancesparepart.repositories.MaintenanceSparePartRepository;
@@ -19,6 +23,7 @@ import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -35,38 +40,16 @@ public class MaintenanceServiceImpl implements MaintenanceServiceInterface {
     private final MaintenanceServiceItemRepository msiRepo;
     private final MaintenanceSparePartRepository mspRepo;
     private final MechanicServiceInterface mechanicService;
-
-    private MaintenanceResponse toResponse(Maintenance m) {
-        return MaintenanceResponse.builder()
-                .id(m.getId())
-                .description(m.getDescription())
-                .limitBudget(m.getLimitBudget())
-                .status(m.getStatus())
-                .hoursWorked(m.getHoursWorked())
-                .startDate(m.getStartDate())
-                .endDate(m.getEndDate())
-                .clientId(m.getClient().getId())
-                .vehicleId(m.getVehicle().getId())
-                .mechanicId(m.getMechanic() != null ? m.getMechanic().getId() : null)
-                .build();
-    }
+    private final MaintenanceMapper mapper;
 
     @Override
     public MaintenanceResponse create(MaintenanceCreateRequest request) {
-        // Buscar cliente por documento
         Client client = clientRepo.findByDocument(request.getClientDocument())
-                .orElseThrow(() ->
-                        new IllegalArgumentException(
-                                "Client with document '" + request.getClientDocument() + "' not found"
-                        )
-                );
-        // Buscar vehículo por placa
+                .orElseThrow(() -> new MaintenanceNotFoundException("Client with document '" + request.getClientDocument() + "' not found"));
+
         Vehicle vehicle = vehicleRepo.findByPlate(request.getVehiclePlate())
-                .orElseThrow(() ->
-                        new IllegalArgumentException(
-                                "Vehicle with license plate '" + request.getVehiclePlate() + "'  not found"
-                        )
-                );
+                .orElseThrow(() -> new MaintenanceNotFoundException("Vehicle with plate '" + request.getVehiclePlate() + "' not found"));
+
         Maintenance maintenance = Maintenance.builder()
                 .client(client)
                 .vehicle(vehicle)
@@ -76,27 +59,28 @@ public class MaintenanceServiceImpl implements MaintenanceServiceInterface {
                 .build();
 
         Maintenance saved = maintenanceRepo.save(maintenance);
-        return toResponse(saved);
+        return mapper.toMaintenanceResponse(saved);
     }
 
     @Override
     @Transactional(readOnly = true)
     public MaintenanceResponse getById(Long id) {
         Maintenance maintenance = maintenanceRepo.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Maintenance not found"));
-        return toResponse(maintenance);
+                .orElseThrow(() -> new MaintenanceNotFoundException("Maintenance not found with ID: " + id));
+        return mapper.toMaintenanceResponse(maintenance);
     }
 
     @Override
     @Transactional(readOnly = true)
     public Page<MaintenanceResponse> getAll(Pageable pageable) {
-        return maintenanceRepo.findAll(pageable).map(this::toResponse);
+        return maintenanceRepo.findAll(pageable)
+                .map(mapper::toMaintenanceResponse);
     }
 
     @Override
     public MaintenanceResponse update(Long id, MaintenanceUpdateRequest request) {
         Maintenance maintenance = maintenanceRepo.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Maintenance not found"));
+                .orElseThrow(() -> new MaintenanceNotFoundException("Maintenance not found with ID: " + id));
 
         maintenance.setDescription(request.getDescription());
         maintenance.setLimitBudget(request.getLimitBudget());
@@ -105,120 +89,77 @@ public class MaintenanceServiceImpl implements MaintenanceServiceInterface {
 
         if (request.getMechanicId() != null) {
             Mechanic mechanic = mechanicRepo.findById(request.getMechanicId())
-                    .orElseThrow(() -> new IllegalArgumentException("Mechanic not found"));
+                    .orElseThrow(() -> new MechanicNotFoundException("Mechanic not found with ID: " + request.getMechanicId()));
             maintenance.setMechanic(mechanic);
         }
 
-        return toResponse(maintenanceRepo.save(maintenance));
+        return mapper.toMaintenanceResponse(maintenanceRepo.save(maintenance));
     }
 
     @Override
     public void delete(Long id) {
         if (!maintenanceRepo.existsById(id)) {
-            throw new IllegalArgumentException("Maintenance not found");
+            throw new MaintenanceNotFoundException("Maintenance not found with ID: " + id);
         }
         maintenanceRepo.deleteById(id);
     }
 
     @Override
     public MaintenanceResponse assignMechanic(Long maintenanceId) {
-        Maintenance m = maintenanceRepo.findById(maintenanceId)
-                .orElseThrow(() -> new IllegalArgumentException("Maintenance not found"));
-        if (m.getStatus() != MaintenanceStatus.PENDING) {
-            throw new IllegalStateException("Can only assign mechanic to PENDING maintenance");
+        Maintenance maintenance = maintenanceRepo.findById(maintenanceId)
+                .orElseThrow(() -> new MaintenanceNotFoundException("Maintenance not found with ID: " + maintenanceId));
+
+        Mechanic mechanic = getMechanic(maintenance);
+
+        maintenance.setMechanic(mechanic);
+        maintenance.setStatus(MaintenanceStatus.IN_PROGRESS);
+        maintenance.setStartDate(LocalDate.now());
+
+        return mapper.toMaintenanceResponse(maintenanceRepo.save(maintenance));
+    }
+
+    private Mechanic getMechanic(Maintenance maintenance) {
+        if (maintenance.getStatus() != MaintenanceStatus.PENDING) {
+            throw new InvalidMaintenanceStatusException("Only PENDING maintenances can be assigned a mechanic");
+
         }
-        // obtenemos el top-ten y asignamos el primero
+
         List<MechanicResponse> candidates = mechanicService.getTopTenAvailable();
         if (candidates.isEmpty()) {
             throw new IllegalStateException("No available mechanics");
         }
-        // buscamos la entidad Mechanic por id
-        Long mechId = candidates.get(0).getId();
-        Mechanic mech = new Mechanic();
-        mech.setId(mechId); // asumimos que sólo necesitamos la referencia
-        m.setMechanic(mech);
-        m.setStatus(MaintenanceStatus.IN_PROGRESS);
-        m.setStartDate(LocalDate.now());
-        Maintenance updated = maintenanceRepo.save(m);
-        return toResponse(updated);
+
+        Long mechanicId = candidates.getFirst().getId();
+        Mechanic mechanic = new Mechanic();
+        mechanic.setId(mechanicId);
+        return mechanic;
     }
 
     @Override
     @Transactional(readOnly = true)
     public MaintenanceFullResponse getFullDetails(Long maintenanceId) {
-        Maintenance m = maintenanceRepo.findById(maintenanceId)
-                .orElseThrow(() -> new IllegalArgumentException("Maintenance not found"));
+        Maintenance maintenance = maintenanceRepo.findById(maintenanceId)
+                .orElseThrow(() -> new MaintenanceNotFoundException("Maintenance not found with ID: " + maintenanceId));
 
-        // Cliente
-        Client c = m.getClient();
-        MaintenanceFullResponse.ClientInfo ci = new MaintenanceFullResponse.ClientInfo(
-                c.getId(),
-                c.getFirstName(), c.getSecondName(), c.getFirstLastName(), c.getSecondLastName(),
-                c.getDocumentType(), c.getDocument(),
-                c.getCellphone(), c.getAddress(), c.getEmail()
-        );
-
-        // Mecánico (puede ser null si aún no asignado)
-        MaintenanceFullResponse.MechanicInfo mi = null;
-        if (m.getMechanic() != null) {
-            Mechanic mech = m.getMechanic();
-            mi = new MaintenanceFullResponse.MechanicInfo(
-                    mech.getId(),
-                    mech.getFirstName(), mech.getSecondName(), mech.getFirstLastName(), mech.getSecondLastName(),
-                    mech.getDocumentType(), mech.getDocument(),
-                    mech.getCellphone(), mech.getAddress(), mech.getEmail(),
-                    mech.getStatus().name()
-            );
-        }
-
-        // Repuestos
-        List<MaintenanceFullResponse.SparePartItem> spareItems = mspRepo.findByMaintenanceId(m.getId())
+        List<MaintenanceFullResponse.SparePartItem> spareParts = mspRepo.findByMaintenanceId(maintenance.getId())
                 .stream()
-                .map(sp -> {
-                    double line = sp.getQuantity() * sp.getSparePart().getUnitPrice();
-                    return new MaintenanceFullResponse.SparePartItem(
-                            sp.getId(),
-                            sp.getSparePart().getName(),
-                            sp.getQuantity(),
-                            sp.getSparePart().getUnitPrice(),
-                            line
-                    );
-                }).collect(Collectors.toList());
+                .map(mapper::toSparePartItem)
+                .collect(Collectors.toList());
 
-        // Servicios
-        List<MaintenanceFullResponse.ServiceItem> serviceItems = msiRepo.findByMaintenanceId(m.getId())
+        List<MaintenanceFullResponse.ServiceItem> serviceItems = msiRepo.findByMaintenanceId(maintenance.getId())
                 .stream()
-                .map(si -> {
-                    double line = si.getEstimatedTime() * si.getMechanicalService().getPrice();
-                    return new MaintenanceFullResponse.ServiceItem(
-                            si.getId(),
-                            si.getMechanicalService().getName(),
-                            si.getEstimatedTime(),
-                            si.getMechanicalService().getPrice(),
-                            line
-                    );
-                }).collect(Collectors.toList());
+                .map(mapper::toServiceItem)
+                .collect(Collectors.toList());
 
-        // Total
-        double totalCost = spareItems.stream().mapToDouble(MaintenanceFullResponse.SparePartItem::getLineTotal).sum()
-                + serviceItems.stream().mapToDouble(MaintenanceFullResponse.ServiceItem::getLineTotal).sum();
+        BigDecimal totalCost = spareParts.stream()
+                .map(MaintenanceFullResponse.SparePartItem::getLineTotal)
+                .reduce(BigDecimal.ZERO, BigDecimal::add)
+                .add(
+                        serviceItems.stream()
+                                .map(MaintenanceFullResponse.ServiceItem::getLineTotal)
+                                .reduce(BigDecimal.ZERO, BigDecimal::add)
+                );
 
-        return MaintenanceFullResponse.builder()
-                .id(m.getId())
-                .description(m.getDescription())
-                .limitBudget(m.getLimitBudget())
-                .status(m.getStatus().name())
-                .hoursWorked(m.getHoursWorked())
-                .startDate(m.getStartDate())
-                .endDate(m.getEndDate())
-                .client(ci)
-                .mechanic(mi)
-                .spareParts(spareItems)
-                .serviceItems(serviceItems)
-                .totalCost(totalCost)
-                .build();
+        return mapper.toFullResponse(maintenance, spareParts, serviceItems, totalCost);
     }
-
-
-
 }
